# summarizer_agent_langgraph

./: .gitignore  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_OVERVIEW.md  CONNECTION_FIX.md  DEPLOYMENT.md  DEPLOYMENT_FILES_README.md  FIX_RAILWAY_DOMAIN.md  MEMORY_FIX.md  OLLAMA_DEBUG.md  OLLAMA_FIX.md  OLLAMA_RAILWAY_SETUP.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_FIX_URL.md  RAILWAY_ROOT_DIRECTORY_FIX.md  README.md  README_FULLSTACK.md  SETUP_GUIDE.md  deploy-railway.bat  deploy-railway.sh  railway-multi.yaml  railway-single.yaml  railway.toml  railway.yaml
.github/instructions/: abc.instructions.md
backend/: .dockerignore  .env.example  .pylintrc  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ollama  GETTING_STARTED.md  INSTALL.md  RAILWAY.md  README.md  api.py  langgraph.json  main.py  nixpacks.toml  pyproject.toml  quickstart.py  railway.json  railway.yaml  reinstall_libraries.bat  render.yaml  requirements.txt  results.txt  start.bat  start.sh  tempCodeRunnerFile.py  test_api.py  test_setup.py
backend/data/: sample0.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt
backend/examples/: examples.py
backend/src/: __init__.py  main.py
backend/src/config/: __init__.py  models.py
backend/src/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/src/utils/: __init__.py  helpers.py
frontend/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.bat  vercel.json
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: 404.html  500.html  about.html  index.html
